Aria service working, extracted auth/404/validation middlewares, added some babel proposal
